--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:theme="@style/Theme.TaskBeats"
         tools:targetApi="31">
         <activity
-            android:name=".TaskDetailActivity"
+            android:name=".presentation.TaskDetailActivity"
             android:exported="true" />
         <activity
-            android:name=".TaskListActivity"
+            android:name=".presentation.TaskListActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
