--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <application
         android:allowBackup="true"
+        android:name=".TaskBeatsApplication"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -14,7 +15,8 @@
         tools:targetApi="31">
         <activity
             android:name=".presentation.TaskDetailActivity"
-            android:exported="true" />
+            android:exported="false" >
+        </activity>
         <activity
             android:name=".presentation.TaskListActivity"
             android:exported="true">
