--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,11 @@ plugins {
 
 android {
     namespace 'com.comunidadedevspace.taskbeats'
-    compileSdk 34
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.comunidadedevspace.taskbeats"
-        minSdk 23
+        minSdk 21
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -20,6 +20,8 @@ android {
         Properties properties = new Properties()
         properties.load(project.rootProject.file('local.properties').newDataInputStream())
         buildConfigField "String", "API_KEY", "\"${properties.getProperty('API_KEY')}\""
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -43,7 +45,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation "io.coil-kt:coilTe:2.3.0"
+    implementation "io.coil-kt:coil:2.3.0"
 
     final retrofitVersion = '2.9.0'
     final okHttpVersion = '4.9.1'
